[package]
name = "future_epoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
rustix = { version = "0.38.21", features = ["net", "libc_errno", "event", "time"] }
futures = "0.3.29"